Revert "Merge branch 'master' into 'lijsttest'"
This reverts commit 65f8ff7126b1eb407a096483226430bd59209d33

--- a/parque_banque_server/src/main/resources/templates/confirmbusinessaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmbusinessaccount.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Overzicht bedrijven</title>
+    <title>Bevestiging van het openen van een zakelijke rekening</title>
 </head>
 <body>
-    <h1>Overzicht bedrijfsrekeningen</h1>
+
 </body>
 </html>
