--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -38,7 +38,8 @@
 <head>
     <meta charset="UTF-8">
     <title>rekeningoverzicht</title>
-    <a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80px" height="45px"></a>
+    <img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80"
+         height="45">
 
 </head>
 <br/>
@@ -56,7 +57,7 @@
         <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
     </td>
     <td>
-        <button onclick="document.location = '/uitloggen'">Uitloggen</button>
+        <button onclick="document.location = '/'">Uitloggen</button>
     </td>
 </tr>
 
