--- a/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
+++ b/parque_banque_server/src/main/resources/templates/confirmnewaccount.html
@@ -3,84 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Bevestiging Nieuwe Particuliere Rekening Geopend</title>
-    <style>
-         .hoofd-div{
-
-           padding-top: 5%;
-            padding-left: 20%;
-            margin-top: 3%;
-            margin-left: -8%;
-            margin-right: -8%;
-            background-color:#37AD49; 
-            font-family:sans-serif; 
-            margin-bottom: 10%;
-         
-         
-        }
-        .sub-div{
-           padding-left: 20%;
-            font-family: sans-serif;
-           margin-top: -5%;
-            margin-left: -8%;
-            margin-right: 55%;
-        }
-        
-        .IbanSaldo{
-              padding-left: 20%;
-            font-family: sans-serif;
-           margin-top: 6%;
-            margin-left: -8%;
-            margin-right: 65%;
-          
-        }
-        
-        
-        .knop-div{
-              margin-top:   10%;
-            padding-left: 20%;
-             margin-left: -8%;
-            margin-right: -8%;
-
-        }
-        
-        #rekeningoverzicht{
-            padding: 20px 40px;
-            color: #fff; 
-            border-radius: 25px;
-            background-color: #37AD49;
-            border: 2px solid #37AD49;
-            border-color: #37AD49;
-            cursor: pointer;
-        }
-    
-    
-    
-    
-    
-    </style>
 </head>
 <body>
-    <div class="hoofd-div">
-    <h1> Gefeliciteerd! U heeft een nieuwe rekening geopend voor
-        <span th:if="${businessAccount}" class="businessClass" th:text="${name}"/>
-        <span th:if="${privateAccount}" class="privateClass" th:text="${name}"/>
-    </h1>
-    </div>
-    
-    <div class="sub-div">
-    <h3>Detailinformatie nieuwe bankrekening:</h3>
-    </div>
-    
-    <div class="IbanSaldo" >
-    <h2>IBAN: <span th:text="${iban}" /></h2>
-    <h2>Saldo: <span th:text="${balanceCent}" /></h2>
-     </div>
-    
-    
-    <div class="knop-div">
-    <form action="/rekening-overzicht">
-    <input type="submit" value="rekeningoverzicht" id="rekeningoverzicht">
-    </form>
-    </div>
+<h1> Gefeliciteerd! U heeft een nieuwe rekening geopend!</h1>
+    <h2>Detailinformatie nieuwe bankrekening</h2>
+    <h1>IBAN: <span th:text="${iban}" /></h1>
+    <h1>Saldo: <span th:text="${balanceCent}" /></h1>
 </body>
 </html>
