--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -38,8 +38,7 @@
 <head>
     <meta charset="UTF-8">
     <title>rekeningoverzicht</title>
-    <img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80"
-         height="45">
+    <a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80px" height="45px"></a>
 
 </head>
 <br/>
@@ -57,7 +56,7 @@
         <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
     </td>
     <td>
-        <button onclick="document.location = '/'">Uitloggen</button>
+        <button onclick="document.location = '/uitloggen'">Uitloggen</button>
     </td>
 </tr>
 
