--- a/parque_banque_server/src/main/resources/templates/newcompany.html
+++ b/parque_banque_server/src/main/resources/templates/newcompany.html
@@ -5,21 +5,21 @@
     <title>Nieuw bedrijf aanmaken bij Parque Banque</title>
     <style type="text/css">
         img{
+            text-align: left;
             display: inline-block;
             height: 50px;
         }
+        body {
+            text-align: center;
+        }
         label {
-            font-family: Segoe;
             display: inline-block;
             width: 100px;
             margin: 5px;
             text-align: left;
         }
-        h1 {
-            font-family: "Segoe";
-        }
-        p{
-            font-family: Segoe;
+        input {
+            width: 20%;
         }
         button {
             padding: 5px;
@@ -35,7 +35,9 @@
     </style>
 </head>
 <body>
-<img src="../static/logo-small.png"/>
+<a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink"></a>
+<a href="/uitloggen">Uitloggen</a>
+<br>
 <h1>Bedrijf aanmelden bij Parque Banque</h1>
 <p>Vul hieronder de gegevens in van het bedrijf waarvoor u een rekening wilt openen:</p>
 <p>Velden met een * zijn verplicht.</p><br>
@@ -43,26 +45,36 @@
 <form th:action="@{/nieuw-bedrijf-aanmaken}" method="post" th:object="${newCompany}">
     <label>Kvk-nummer *</label>
     <input type="text" th:field="*{kvkNr}"
-           required pattern="^(?=.*\d){8,}$"
+           required pattern="^[0-9]{8}$"
            title="Het KvK-nummer bestaat uit 8 cijfers."
-           oninvalid="setCustomValidity('Controleer of het KvK-nummer klopt')">
+           oninvalid="setCustomValidity('Controleer of het KvK-nummer klopt')"
+           oninput="setCustomValidity('')">
     <br/><br/>
+
     <label>Btw-nummer *</label>
     <input type="text" th:field="*{btwNr}"
-           required pattern="^(?=.*[A-Z])(?=.*[A-Z]){14,}$"
+           required pattern="^[A-Za-z]{2}[0-9]{9}[Bb][0-9]{2}$"
            title="Het btw-nummer bestaat uit 14 tekens en begint met een landcode, bijvoorbeeld NL."
-           oninvalid="setCustomValidity('Controleer of het btw-nummer klopt')">
+           oninvalid="setCustomValidity('Controleer of het btw-nummer klopt')"
+           oninput="setCustomValidity('')">
         <br><br>
+
     <label>Bedrijfsnaam *</label>
-    <input type="text" th:field="*{name}">
+    <input type="text" th:field="*{name}"
+           required pattern="^(?!\s)(?!.*\s$)(?=.*[a-zA-Z0-9])[a-zA-Z0-9 '~@#&?!*+-]{2,254}$"
+           oninvalid="setCustomValidity('Controleer of de bedrijfsnaam klopt.')"
+           oninput="setCustomValidity('')">
         <br><br>
+
     <label>Sector *</label>
     <select th:field="*{sectorName}">
-        <option th:each="sector : ${sectoren}" th:value="${sector.getName()}" th:text="${sector.getName()}"/>
+        <option th:each="sector : ${sectoren}" th:value="${sector.getName()}" th:text="${sector.getName()}"
+                oninput="setCustomValidity('')"/>
     </select>
         <br><br>
     <button type="submit" name="action" value="send">Bedrijf aanmelden</button>
 </form>
+</div>
 
 </body>
 </html>
