--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -1,130 +1,134 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<style>
-    table {
-        alignment: center;
-        width: 100%;
-        border: 1px solid black
-    }
-
-    td {
-        font-family: "Arial";
-        width: 100px;
-        font-size: small;
-    }
-
-    th {
-        border: 1px solid #dddddd;
-        text-align: left;
-        font-family: "Arial";
-        font-size: small;
-        padding: 8px;
-        width: 300px;
-    }
-
-    thead {
-        font-size: 8px
-    }
-
-    h1 {
-        font-family: "Arial";
-        font-size: x-large;
-    }
-
-    h2 {
-        font-family: "Arial";
-        font-size: small;
-    }
-
-    tr:nth-child(even) {
-        background-color: #dddddd;
-    }
-
-    button {
-        alignment: left;
-    }
-</style>
 <head>
     <meta charset="UTF-8">
     <title>rekeningoverzicht</title>
-    <a href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque" class="logolink" width="80px" height="45px"></a>
 
+    <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <style>
+        table {
+            alignment: center;
+            width: 100%;
+            border: 1px solid black
+        }
+        td {
+            font-family: "Arial",sans-serif;
+            width: 100px;
+            font-size: small;
+        }
+        th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            font-family: "Arial",sans-serif;
+            font-size: small;
+            padding: 8px;
+            width: 300px;
+        }
+        thead {
+            font-size: 8px
+        }
+        h1 {
+            font-family: "Arial",sans-serif;
+            font-size: x-large;
+        }
+        h2 {
+            font-family: "Arial", sans-serif;
+            font-size: small;
+        }
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+        button {
+            alignment: left;
+        }
+        tr[data-href]:hover {
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
-<tr>
-    <td>
-        <button onclick="document.location = '/wijzigen-rekening'">Wijzigen gegevens</button>
-    </td>
-    <td>
-        <button onclick="document.location = '/rekening-openen'">Rekening openen</button>
-    </td>
-    <td>
-        <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
-    </td>
-    <td>
-        <button onclick="document.location = '/uitloggen'">Uitloggen</button>
-    </td>
-</tr>
+    <!-- navigatie -->
+    <nav class="navigation">
+        <ul>
+            <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+            <li class="nav-link"><a  href="/inloggen">Inloggen</a></li>
+            <li class="nav-link"><a  href="/klant-worden">Klant worden</a></li>
+            <li class="nav-link"><a  href="/contact">Contact</a></li>
+        </ul>
+    </nav>
 
-<br/><br/>
-<h1>Welkom <span th:text="${firstName}"/> <span th:text="${affix}"/> <span th:text="${surName}"/> bij Parque Banque!
+    <!-- body -->
+    <br/><br/>
+    <h1>Welkom <span th:text="${customer.firstName}"></span> <span th:text="${customer.affix}"></span> <span th:text="${customer.surName}"></span> bij Parque Banque!
+        <br/>
+        <h2>Hier vindt u het overzicht van uw rekening(en)</h2>
+    </h1>
+
     <br/>
-    <h2>Hier vindt u het overzicht van uw rekening(en)</h2>
-</h1>
 
-<br/>
-<br/>
-<br/>
+    <button onclick="document.location = '/wijzigen-rekening'">Wijzigen gegevens</button>
+    <button onclick="document.location = '/rekening-openen'">Rekening openen</button>
+    <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
+    <button onclick="document.location = '/uitloggen'">Uitloggen</button>
 
+    <br/>
 
-<head>Prive Rekening</head>
-<table>
-    <thead>
-    <tr>
-        <th>Rekeninghouder</th>
-        <th>IBAN</th>
-        <th>Saldo</th>
-    </tr>
-    </thead>
-    <tbody>
+    <h1>Prive Rekening</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Rekeninghouder</th>
+                <th>IBAN</th>
+                <th>Saldo</th>
+            </tr>
+        </thead>
 
+        <tbody>
+            <tr th:if="${privateaccounts.empty}">
+                <td> Geen rekeningen </td>
+            </tr>
+            <tr th:each="privateaccount : ${privateaccounts}" th:data-href="@{/rekening-overzicht/details(${privateaccount.iban})}">
+                <td th:text="${customer.firstName + ' ' + customer.affix + ' ' + customer.surName}"></td>
+                <td th:text="${privateaccount.iban}"></td>
+                <td th:text="${privateaccount.balanceCent}"></td>
+            </tr>
+        </tbody>
+    </table>
+    <br/>
+    <br/>
 
-    <tr th:if="${privateaccounts.empty}">
-        <td> Geen rekeningen></td>
-    </tr>
-    <tr th:each="privateaccount : ${privateaccounts}">
-        <td th:text="${firstName + ' ' + affix + ' ' + surName}"></td>
-        <td th:text="${privateaccount.iban}"></td>
-        <td th:text="${privateaccount.balanceCent}"></td>
-    </tr>
-    </tbody>
-  </table>
+    <h1>Zakelijke rekening</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Rekeninghouder</th>
+                <th>IBAN</th>
+                <th>Saldo</th>
+            </tr>
+        </thead>
 
-<br/>
-<br/>
-</body>
-<head>Zakelijke rekening</head>
-<table>
-    <thead>
-    <tr>
-        <th>Rekeninghouder</th>
-        <th>IBAN</th>
-        <th>Saldo</th>
-    </tr>
-    </thead>
-    <tbody>
+        <tbody>
+            <tr th:if="${businessaccounts.empty}">
+                <td> Geen rekeningen </td>
+            </tr>
+            <tr th:each="businessaccount : ${businessaccounts}" th:data-href="@{/rekening-overzicht/details(id=${businessaccount.iban})}">
+                <td th:text="${customer.firstName + ' ' + customer.affix + ' '+ customer.surName}"></td>
+                <td th:text="${businessaccount.iban}"></td>
+                <td th:text="${businessaccount.balanceCent}"></td>
+            </tr>
+        </tbody>
+    </table>
 
-
-    <tr th:if="${businessaccounts.empty}">
-        <td> Geen rekeningen></td>
-    </tr>
-    <tr th:each="businessaccount : ${businessaccounts}">
-        <td th:text="${firstName + ' ' + affix + ' '+ surName}"></td>
-        <td th:text="${businessaccount.iban}"></td>
-        <td th:text="${businessaccount.balanceCent}"></td>
-
-    </tr>
-    </tbody>
-</table>
+    <script>
+        $(document).ready(function () {
+            $(document.body).on("click", "tr[data-href]", function () {
+                window.location.href = this.dataset.href;
+            })
+        })
+    </script>
 </body>
 </html>
