--- a/parque_banque_server/src/main/resources/templates/confirmtransaction.html
+++ b/parque_banque_server/src/main/resources/templates/confirmtransaction.html
@@ -20,28 +20,26 @@
 
     <!-- main-content-->
     <main>
-        <form action="#" th:action="@{/overboeken-volgende}" th:object="${transactionFormBean}" method="post" >
+        <form action="#" th:action="@{/overboeken}" th:object="${transactionInput}" method="post" >
             <fieldset>
-                <legend>Overboeking van rekening <span>NLXXPARQ0XXXXXXXX</span></legend>
+                <legend>Kloppen onderstaande gegevens? </legend>
                 <div>
                     <label for="amount">Bedrag</label>
-                    <input th:field="*{amount}" id="amount" type="text" pattern="\d{0,6}" placeholder="0" size="8" dir="rtl">
+                    <input th:field="*{amount}" id="amount" type="text" disabled>
                     <label for="cents">,</label>
-                    <input th:field="*{cents}" id="cents" type="text" size="2" pattern="\d{2}" placeholder="00">
+                    <input th:field="*{cents}" id="cents" type="text" disabled>
                 </div>
                 <div>
                     <label  for="iban">Rekeningnummer (IBAN) ontvanger</label>
-                    <input th:field="*{iban}" id="iban" type="text" placeholder="NLxxPARQ0..." size="18" min="18" max="18">
+                    <input th:field="*{ibanCreditAccount}" id="iban" type="text" disabled>
                 </div>
                 <div>
-                    <!-- hier js voor terugtellen tekens -->
-                    <!-- nog het invoervak grote maken -->
                     <label for="description">Omschrijving</label>
-                    <input th:field="*{description}" id="description" type="text" max="140" size="18">
-                    <label for></label>
+                    <input th:field="*{description}" id="description" type="text" disabled>
                 </div>
             </fieldset>
-            <button th:type="submit">Volgende</button>
+            <button th:type="submit" name="action" value="send">Verzenden</button>
+            <button th:type="submit" name="action" value="back">Terug</button>
         </form>
     </main>
 
