--- a/parque_banque_server/src/main/resources/templates/newtransaction.html
+++ b/parque_banque_server/src/main/resources/templates/newtransaction.html
@@ -21,23 +21,24 @@
     <main>
         <form action="#" th:action="@{/overboeken}" th:object="${transactionFormBean}" method="post" >
             <fieldset>
-                <legend>Overboeking van rekening <span>NLXXPARQ0XXXXXXXX</span></legend>
+                <legend>Overboeking van rekening <span th:field="${ibanDebitAccount}"></span></legend>
                 <div>
                     <label for="amount">Bedrag</label>
                     <input th:field="*{amount}" id="amount" type="text" pattern="\d{0,6}" placeholder="0" size="8" dir="rtl">
                     <label for="cents">,</label>
                     <input th:field="*{cents}" id="cents" type="text" size="2" pattern="\d{2}" placeholder="00">
+                    <span th:if="${unsufficientBalance}">U heeft onvoldoende saldo op deze rekening</span>
                 </div>
                 <div>
                     <label  for="iban">Rekeningnummer (IBAN) ontvanger</label>
-                    <input th:field="*{creditAccount}" id="iban" type="text" placeholder="NLxxPARQ0..." size="18" min="18" max="18">
+                    <input th:field="*{ibanCreditAccount}" id="iban" type="text" placeholder="NLxxPARQ0..." size="18" min="18" max="18">
+                    <span th:if="${invalidCreditAccount}">Rekeningnummer is niet bij ons bekend</span>
                 </div>
                 <div>
                     <!-- hier js voor terugtellen tekens -->
                     <!-- nog het invoervak grote maken -->
                     <label for="description">Omschrijving</label>
                     <input th:field="*{description}" id="description" type="text" max="140" size="18">
-                    <label for></label>
                 </div>
             </fieldset>
             <button type="submit" name="action" value="next">Volgende</button>
