--- a/parque_banque_server/src/main/resources/templates/createlogin.html
+++ b/parque_banque_server/src/main/resources/templates/createlogin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Maak account - Parque Banque</title>
     <link th:href="@{/css/signup.css}" rel="stylesheet">
+    <link th:href="@{/css/main.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script>
         function Validate() {
@@ -26,11 +27,15 @@
 </head>
 <body>
 
-    <header class="pbMenu">
-        <nav class="pbMenu-homeNav">
-            <a href="/" class="pbMenu-logoLink"><img th:src="@{logo-small.png}" class="logolink" width="162.8" height="41.6"></a>
-        </nav>
-    </header>
+    <nav class="navigation">
+        <ul>
+            <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+            <li class="nav-link"><a  href="/inloggen">Inloggen</a></li>
+            <li class="nav-link"><a  href="/contact">Contact</a></li>
+            <li class="nav-link"><a  href="/">Home</a></li>
+        </ul>
+    </nav>
+    <div class="navPadding"> </div>
 
     <h1>Maak een account</h1>
     <p>Bedenk voor uw account een gebruikersnaam en wachtwoord. Onthoud deze goed.</p>
