--- a/parque_banque_server/src/main/resources/templates/signup.html
+++ b/parque_banque_server/src/main/resources/templates/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Nieuwe klant - Parque Banque</title>
     <link th:href="@{/css/signup.css}" rel="stylesheet">
+    <link th:href="@{/css/main.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <style>
 
@@ -15,12 +16,15 @@
 </head>
 <body>
 
-    <header class="pbMenu">
-        <nav class="pbMenu-homeNav">
-            <a href="/" class="pbMenu-logoLink"><img th:src="@{logo-small.png}" class="logolink" width="162.8" height="41.6"></a>
-        </nav>
-    </header>
-
+    <nav class="navigation">
+        <ul>
+            <li class= "logo-link"><a id="logo" href="/"><img src="../static/logo-small.png" th:src="@{logo-small.png}" alt="parque banque"></a></li>
+            <li class="nav-link"><a  href="/inloggen">Inloggen</a></li>
+            <li class="nav-link"><a  href="/contact">Contact</a></li>
+            <li class="nav-link"><a  href="/">Home</a></li>
+        </ul>
+    </nav>
+    <div class="navPadding"> </div>
     <h1>Welkom!</h1>
     <p>Wat fijn dat u klant bij ons wilt worden!</p>
     <p>Om een rekening te openen bij Parque Banque hebben wij enkele gegevens nodig.</p>
