--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -53,7 +53,7 @@
         <button onclick="document.location = '/rekening-openen'">Rekening openen</button>
     </td>
     <td>
-        <button onclick="document.location = '/rekening-koppelen'">Rekening koppelen</button>
+        <button onclick="document.location = '/rekening-toevoegen'">Rekening koppelen</button>
     </td>
     <td>
         <button onclick="document.location = '/uitloggen'">Uitloggen</button>
