--- a/parque_banque_server/src/main/resources/templates/accountview.html
+++ b/parque_banque_server/src/main/resources/templates/accountview.html
@@ -52,9 +52,10 @@
     <td>
         <button onclick="document.location = '/rekening-openen'">Rekening openen</button>
     </td>
-    <td>
-        <button onclick="document.location = '/rekening-toevoegen'">Rekening koppelen</button>
-    </td>
+<!--    <td>-->
+<!--        <button onclick="document.location = '/rekening-toevoegen'">Rekening koppelen</button>-->
+<!--    </td>-->
+    <td><input type=button onclick="location.href='linkpaymentaccount'" value='Rekening toevoegen'></td>
     <td>
         <button onclick="document.location = '/uitloggen'">Uitloggen</button>
     </td>
