Bij terugknop kwamen ingevoerde gegevens niet mee, aangepast.

--- a/parque_banque_server/src/main/resources/templates/confirmtransaction.html
+++ b/parque_banque_server/src/main/resources/templates/confirmtransaction.html
@@ -20,7 +20,7 @@
 
     <!-- main-content-->
     <main>
-        <form action="#" th:action="@{/overboeken}" th:object="${transactionInput}" method="post" >
+        <form action="#" th:action="@{/overboeken}" th:object="${transactionFormBean}" method="post" >
             <fieldset>
                 <legend>Kloppen onderstaande gegevens? </legend>
                 <div>
